syntax = "proto3";

package doctorPagerService;
import "models/doctor.proto";
service DoctorPagerService {
  rpc RegisterDoctor (RegisterDoctorRequest) returns ( stream NotificationResponse);
  rpc UnregisterDoctor (UnregisterDoctorRequest) returns (UnregisterDoctorResponse);
}

message RegisterDoctorRequest {
  string doctorName = 1;
}

message NotificationResponse{
  bool success = 6;
  optional string errorMessage = 7;
  oneof notification{
    string changeStatus = 1;
    string attending = 2;
    string finishAttending = 3;
    string register = 4;
    string unregister = 5;
  }
}

message UnregisterDoctorRequest {
  string doctor_name = 1;
}

message UnregisterDoctorResponse {
  bool success = 1;
  optional string errorMessage = 2;
  optional models.doctor.Doctor doctor = 3;
}


