syntax = "proto3";
package models.doctor;

message Doctor {
  string name = 1;
  int32 level = 2;
  DoctorStatus status = 3;
}

enum DoctorStatus {
  AVAILABLE = 0;
  ATTENDING = 1;
  UNAVAILABLE = 2;
}